k8s/infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lovable-main-ingress
  namespace: lovable-core
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: "nginx"
  rules:

    - host: lovable.iakshit.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lovable-frontend
                port:
                  number: 80

    - host: www.lovable.iakshit.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lovable-frontend
                port:
                  number: 80

    - host: api.lovable.iakshit.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 80

    - host: "*.previews.lovable.iakshit.space"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lovable-me-proxy
                port:
                  number: 80
